// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`switchButtonField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_b9c48i2 uv_b9c48i0 uv_xf61n40 uv_xf61n42j"
      >
        <div
          class="uv_b9c48i4 uv_b9c48i3 uv_mzeuq80 uv_mzeuq81 uv_mzeuq85 uv_mzeuq86 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
          data-checked="false"
          data-disabled="false"
          data-testid="switch-button-left"
          data-type="radio"
          role="button"
          style="--uv_1d8tbmb3: 1; --uv_8im5570: none; --uv_8im5571: inline; --uv_8im5572: 100%;"
          tabindex="0"
        >
          <div
            class="uv_v3r5nr0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
          >
            <div
              aria-disabled="false"
              class="uv_mzeuq8d uv_v3r5nr4 uv_v3r5nr2"
              data-checked="false"
              data-invalid="false"
            >
              <input
                aria-disabled="false"
                class="uv_v3r5nra"
                id="_r_4_"
                name="test"
                tabindex="-1"
                type="radio"
                value="left"
              />
              <svg
                class="uv_v3r5nrb"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    class="uv_v3r5nre"
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="uv_v3r5nrd"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="uv_v3r5nrc"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="uv_v3r5nr7 uv_v3r5nr5 uv_v3r5nr8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                for="_r_4_"
              >
                Left
              </label>
            </div>
          </div>
        </div>
        <div
          class="uv_b9c48i4 uv_b9c48i3 uv_mzeuq80 uv_mzeuq81 uv_mzeuq85 uv_mzeuq86 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
          data-checked="false"
          data-disabled="false"
          data-testid="switch-button-right"
          data-type="radio"
          role="button"
          style="--uv_1d8tbmb3: 1; --uv_8im5570: none; --uv_8im5571: inline; --uv_8im5572: 100%;"
          tabindex="0"
        >
          <div
            class="uv_v3r5nr0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
          >
            <div
              aria-disabled="false"
              class="uv_mzeuq8d uv_v3r5nr4 uv_v3r5nr2"
              data-checked="false"
              data-invalid="false"
            >
              <input
                aria-disabled="false"
                class="uv_v3r5nra"
                id="_r_c_"
                name="test"
                tabindex="-1"
                type="radio"
                value="right"
              />
              <svg
                class="uv_v3r5nrb"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    class="uv_v3r5nre"
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="uv_v3r5nrd"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="uv_v3r5nrc"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="uv_v3r5nr7 uv_v3r5nr5 uv_v3r5nr8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                for="_r_c_"
              >
                Right
              </label>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`switchButtonField > should works with defaultValues 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_b9c48i2 uv_b9c48i0 uv_xf61n40 uv_xf61n42j"
      >
        <div
          class="uv_b9c48i4 uv_b9c48i3 uv_mzeuq80 uv_mzeuq81 uv_mzeuq85 uv_mzeuq86 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
          data-checked="false"
          data-disabled="false"
          data-testid="switch-button-left"
          data-type="radio"
          role="button"
          style="--uv_1d8tbmb3: 1; --uv_8im5570: none; --uv_8im5571: inline; --uv_8im5572: 100%;"
          tabindex="0"
        >
          <div
            class="uv_v3r5nr0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
          >
            <div
              aria-disabled="false"
              class="uv_mzeuq8d uv_v3r5nr4 uv_v3r5nr2"
              data-checked="false"
              data-invalid="false"
            >
              <input
                aria-disabled="false"
                class="uv_v3r5nra"
                id="_r_m_"
                name="test"
                tabindex="-1"
                type="radio"
                value="left"
              />
              <svg
                class="uv_v3r5nrb"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    class="uv_v3r5nre"
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="uv_v3r5nrd"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="uv_v3r5nrc"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="uv_v3r5nr7 uv_v3r5nr5 uv_v3r5nr8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                for="_r_m_"
              >
                Left
              </label>
            </div>
          </div>
        </div>
        <div
          class="uv_b9c48i4 uv_b9c48i3 uv_mzeuq80 uv_mzeuq81 uv_mzeuq85 uv_mzeuq86 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
          data-checked="false"
          data-disabled="false"
          data-testid="switch-button-right"
          data-type="radio"
          role="button"
          style="--uv_1d8tbmb3: 1; --uv_8im5570: none; --uv_8im5571: inline; --uv_8im5572: 100%;"
          tabindex="0"
        >
          <div
            class="uv_v3r5nr0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
          >
            <div
              aria-disabled="false"
              class="uv_mzeuq8d uv_v3r5nr4 uv_v3r5nr2"
              data-checked="false"
              data-invalid="false"
            >
              <input
                aria-disabled="false"
                class="uv_v3r5nra"
                id="_r_u_"
                name="test"
                tabindex="-1"
                type="radio"
                value="right"
              />
              <svg
                class="uv_v3r5nrb"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    class="uv_v3r5nre"
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="uv_v3r5nrd"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="uv_v3r5nrc"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="uv_v3r5nr7 uv_v3r5nr5 uv_v3r5nr8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                for="_r_u_"
              >
                Right
              </label>
            </div>
          </div>
        </div>
      </div>
      ,
      <button
        class="uv_8xt08s0 uv_8xt08s1 uv_8xt08s3 uv_8xt08s9 uv_8xt08se uv_8xt08si uv_8xt08sl"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
